deploy/multitenancy/base/egress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-egressgateway
  annotations:
  labels:
    app: istio-egressgateway
    istio: egressgateway
spec:
  type: ClusterIP 
  selector:
    app: istio-egressgateway
    istio: egressgateway
  ports:
    -
      name: http2
      port: 80
    -
      name: https
      port: 443
    -
      name: tls
      port: 15443
      targetPort: 15443
